--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -27,13 +27,21 @@
         width: 990px;
     }
     section#login > div#imagens {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 50%;
 
+    }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario > p {
+        font-size: 1.2em;
     }
 }
