--- a/estilos/style.css
+++ b/estilos/style.css
@@ -61,3 +61,57 @@ div#formulario > h1 {
 div#formulario > p {
     font-size: 0.8em;
 }
+
+form > div.campo {
+    background-color: #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: black;
+    border:none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #5da4a1b4;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: white;
+    color: #49a09d;
+    border: 1px solid #49a09d;
+    border-radius: 5px;
+    text-decoration: none;
+    cursor: pointer;
+}
+form > a.botao:hover {
+    background-color: #a8e1df;
+}
+
+form > a.botao > i {
+    font-size: .8em;
+}
