--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -7,6 +7,7 @@
     }
     section#login {
         width: 80vw;
+        height: 270px;
     }
     section#login > div#imagens {
         float: left;
@@ -25,6 +26,7 @@
     }
     section#login {
         width: 990px;
+        height: 350px;
     }
     section#login > div#imagens {
         float: right;
@@ -43,5 +45,6 @@
 
     div#formulario > p {
         font-size: 1.2em;
+        margin: 20px 0px;
     }
 }
